--- a/preamble.html
+++ b/preamble.html
@@ -453,7 +453,7 @@
 
 
         <div id="section-4">
-            <span id="license" class="w3-hide-small w3-hide-medium w3-hide-large">&nbsp;</span>
+            <span id="license">&nbsp;</span>
             <h2>License</h2>
 
             <p>This book's entire contents, including the examples, problems and applets, is released under a <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons
