--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -114,11 +114,12 @@
     <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">8. Integration Theorems</a>
 
     <!-- Support button -->
-<br>
+<br><br>
 
+<!--
 <span class="w3-center w3-large" style="width: 80%; display: block; margin: 0 auto;">
-  <hr>
-</span>
+  <hr />
+</span>-->
 
 <span style="width: 55%; display: block; margin: 0 auto;" onclick="document.getElementById('myModal').style.display='block'" class="w3-bar-item w3-button w3-round-large w3-center w3-large">
   <i class="fa-regular fa-heart"></i> <strong>Support</strong>
@@ -2258,9 +2259,9 @@
     </div>
 
     <div class="w3-col m6 license">
-
+ 
       <a style="text-decoration: none;" rel="license"
-        href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank">
+        href="preamble.html#license">
         <i class="fa-brands fa-creative-commons"></i>
         <i class="fa-brands fa-creative-commons-by"></i>
         <i class="fa-brands fa-creative-commons-nc"></i>
