--- a/preamble.html
+++ b/preamble.html
@@ -410,9 +410,9 @@
 
             </p>
 
-            
-            <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&cl=ffffff&w=a"></script>
-
+            <div style="width: 40%; margin: 0 auto; text-align: center;">
+                <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&cl=ffffff&w=a"></script>
+            </div>
             <p>
                 If you would like to support this project, you can do it using the following links:
             </p>
