--- a/preamble.html
+++ b/preamble.html
@@ -450,7 +450,7 @@
 
 
         <div id="section-4">
-            <span id="license">&nbsp;</span>
+            <span id="license" style="margin-bottom: -10px;color: rgb(249,250,251);">License</span>
             <h2>License</h2>
 
             <p>This book's entire contents, including the examples, problems and applets, is released under a <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons
