--- a/preamble.html
+++ b/preamble.html
@@ -191,37 +191,37 @@
             </iframe>
 
             <p>
-                This interactive book combines theoretical concepts 
+                This interactive book combines theoretical concepts
                 with dynamic visualizations to provide a hands-on
-                approach to learning Vector Calculus. Through 
+                approach to learning Vector Calculus. Through
                 the use of open-source software, you'll explore key topics
-                like vector fields, line and surface integrals, 
+                like vector fields, line and surface integrals,
                 and fundamental theorems in a way that bridges intuition
                 with mathematical rigor.
             </p>
 
             <p>
-                As you work through the material, you'll gain 
+                As you work through the material, you'll gain
                 a deeper understanding of the subject and appreciate both
-                its beauty and its practical applications in 
+                its beauty and its practical applications in
                 real-world scenarios.
             </p>
 
             <p>
-                Unlike traditional textbooks, this online 
-                resource integrates interactive applets to help 
+                Unlike traditional textbooks, this online
+                resource integrates interactive applets to help
                 you visualize
-                complex concepts. You'll be able to explore 
+                complex concepts. You'll be able to explore
                 the geometry of vectors is space, parametric surfaces,
                 vector fields, gradients, divergence, curl, line and surface
-                integrals, among other topics, through engaging 
+                integrals, among other topics, through engaging
                 simulations. These applets are built using open-source
-                tools such as <strong>GeoGebra, Desmos, p5.js, 
-                Three.js, MathBox,</strong> and
+                tools such as <strong>GeoGebra, Desmos, p5.js,
+                    Three.js, MathBox,</strong> and
                 <strong>MathCell.js</strong>.
             </p>
 
-            <iframe loading="lazy" src="applets/threejs/3d-surfaces" style="width: 100%; height: 400px; border: 0;" noscrolling=""> 
+            <iframe loading="lazy" src="applets/threejs/3d-surfaces" style="width: 100%; height: 400px; border: 0;" noscrolling="">
             </iframe>
 
             <p>
@@ -410,10 +410,48 @@
 
             </p>
 
+
             <div style="width: 40%; margin: 0 auto; text-align: center;">
-                <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&cl=ffffff&w=a"></script>
+                <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&amp;cl=ffffff&amp;w=a"></script>
             </div>
+
+
+        </div>
+
+        <br>
+        <hr>
+        <br>
+
+
+
+
+
+        <div id="section-4">
+            <span id="license" style="margin-bottom: -20px;color: rgb(249,250,251,0);">License</span>
+            <h2>License</h2>
+
+            <p>This book's entire contents, including the examples, problems and applets, is released under a <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons
+                    Attribution, Non-Commercial, Share-Alike license</a>. This means:</p>
+
+            <ol>
+                <li>You're welcome to use the examples, problems and applets for your personal studies or research. If
+                    you are using this book for a project (homework or research), please cite it somewhere in your
+                    project.</li>
+                <li>You can only use the book's text, examples, problems and applets for non-commercial projects. That
+                    means you can remix or make your own version of the book, and you can fork and create new applets,
+                    so long as they are not commercial projects (i.e. publishing a book with a publisher).</li>
+                <li>If you do make a project that forks or remixes this book, it must be released under this same
+                    license or a looser one.</li>
+            </ol>
+
             <p>
+                If you have any questions about what you can and can't do with these examples or applets, please <a href="mailto:jcponcemath@gmail.com">get in touch</a>.
+
+            </p>
+
+            <hr>
+
+            <p class="w3-center">
                 If you would like to support this project, you can do it using the following links:
             </p>
 
@@ -442,43 +480,10 @@
                     <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f422/512.gif" alt="🐢" width="32" height="32">
                 </picture>
             </p>
-        </div>
-
-        <br>
-        <hr>
-        <br>
-
-
-        <div id="section-4">
-            <span id="license" style="margin-bottom: -10px;color: rgb(249,250,251);">License</span>
-            <h2>License</h2>
-
-            <p>This book's entire contents, including the examples, problems and applets, is released under a <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons
-                    Attribution, Non-Commercial, Share-Alike license</a>. This means:</p>
-
-            <ol>
-                <li>You're welcome to use the examples, problems and applets for your personal studies or research. If
-                    you are using this book for a project (homework or research), please cite it somewhere in your
-                    project.</li>
-                <li>You can only use the book's text, examples, problems and applets for non-commercial projects. That
-                    means you can remix or make your own version of the book, and you can fork and create new applets,
-                    so long as they are not commercial projects (i.e. publishing a book with a publisher).</li>
-                <li>If you do make a project that forks or remixes this book, it must be released under this same
-                    license or a looser one.</li>
-            </ol>
-
-            <p>
-                If you have any questions about what you can and can't do with these examples or applets, please <a href="mailto:jcponcemath@gmail.com">get in touch</a>.
-
-            </p>
 
             <br>
-            <br>
-            <br>
-            <br>
 
 
-        
 
 
         </div>
