--- a/preamble.html
+++ b/preamble.html
@@ -445,7 +445,8 @@
             </ol>
 
             <p>
-                If you have any questions about what you can and can't do with these examples or applets, please <a href="mailto:jcponcemath@gmail.com">get in touch</a>.
+                If you have any questions about what you can and can't do with these examples or applets, please 
+                <a href="mailto:jcponcemath@gmail.com"><strong><i class="fa-solid fa-envelope"></i> Get in touch</strong></a>.
 
             </p>
 
