--- a/preamble.html
+++ b/preamble.html
@@ -187,17 +187,30 @@
                 understanding how quantities change in space is crucial.
             </p>
 
-            <iframe src="applets/p5js/flow-field-noise-white" style="width: 100%; height: 300px; border: 0;" noscrolling="">
+            <iframe src="applets/p5js/flow-field-noise-white" style="width: 100%; height: 350px; border: 0;" noscrolling="">
             </iframe>
+
+
 
             <p>
                 This interactive book combines theoretical concepts
                 with dynamic visualizations to provide a hands-on
-                approach to learning Vector Calculus. Through
-                the use of open-source software, you'll explore key topics
-                like vector fields, line and surface integrals,
-                and fundamental theorems in a way that bridges intuition
-                with mathematical rigor.
+                approach to learning Vector Calculus.
+                Unlike traditional textbooks, this online
+                resource integrates interactive applets to help
+                you visualize complex concepts
+                in a way that bridges intuition with
+                mathematical rigor.
+                You will be able to explore
+                the geometry of vectors is space, parametric surfaces,
+                vector fields, gradients, divergence, curl,
+                line and surface
+                integrals, among other topics,
+                through engaging simulations.
+                These applets are built using open-source
+                tools such as <strong>GeoGebra, Desmos, p5.js,
+                    Three.js, MathBox,</strong> and
+                <strong>MathCell.js</strong>.
             </p>
 
             <p>
@@ -207,28 +220,16 @@
                 real-world scenarios.
             </p>
 
-            <p>
-                Unlike traditional textbooks, this online
-                resource integrates interactive applets to help
-                you visualize
-                complex concepts. You'll be able to explore
-                the geometry of vectors is space, parametric surfaces,
-                vector fields, gradients, divergence, curl, line and surface
-                integrals, among other topics, through engaging
-                simulations. These applets are built using open-source
-                tools such as <strong>GeoGebra, Desmos, p5.js,
-                    Three.js, MathBox,</strong> and
-                <strong>MathCell.js</strong>.
-            </p>
+            
 
-            <iframe loading="lazy" src="applets/threejs/3d-surfaces" style="width: 100%; height: 400px; border: 0;" noscrolling="">
-            </iframe>
+            <h3>A warning about using computers</h3>
 
             <p>
                 While I advocate for using computers to
                 aid geometric reasoning, I strongly encourage you to
                 develop your problem-solving skills by
-                working through the suggested exercises and filling in
+                working through the suggested exercises
+                and filling in
                 missing details throughout the chapters.
             </p>
 
@@ -244,10 +245,16 @@
                 mathematical ideas, in contrast, are timeless.
             </p>
 
-            <p class="callout"><strong>NOTE!</strong> If you're on a mobile device, some of the applets might not work
+            <p class="callout">
+                <strong>NOTE!</strong>
+                If you're on a mobile device, some of
+                the applets might not work
                 super well for you.
-                They are designed for mouse input, so if you're getting frustrated or your finger is in the way, try the
-                site on a computer.</p>
+                They are designed for mouse input, so
+                if you're getting frustrated or your
+                finger is in the way, try the
+                site on a computer.
+            </p>
 
 
         </div>
@@ -360,7 +367,6 @@
                 The designed of this website was inspired by the following projects:
             </p>
 
-
             <ul>
                 <li>
                     <a href="https://github.com/vincentdoerig/latex-css" target="_blank">LaTeX.CSS</a> by Vincent
@@ -386,6 +392,29 @@
                     <a href="https://github.com/magicbookproject" target="_blank">Magic Book project</a>.
                 </li>
             </ul>
+
+            <p>Many thanks also to:</p>
+
+            <ul>
+                <li>The <a href="https://www.geogebra.org/" target="_blank">GeoGebra</a> developers and community who
+                    share their wonderful constructions and applets.</li>
+                <li><a href="https://thecodingtrain.com/" target="_blank">Daniel Shiffman</a>, an amazing teacher who shares
+                    his knowledge with the world. I have learned all the basics about programming from his <a href="https://natureofcode.com/" target="_blank">books</a> and video tutorials <a href="https://thecodingtrain.com/" target="_blank">The Coding Train</a>.</li>
+                <li><a href="https://lauren-mccarthy.com/Info" target="_blank">Lauren McCarthy</a>, the creator of <a href="https://p5js.org/" target="_blank">p5.js</a>, and to the great community of creative
+                    people who use this programming language.</li>
+                <li><a href="https://paulmasson.github.io/" target="_blank">Paul Masson</a>, the creator of <a href="http://mathcell.org/" target="_blank">MathCell</a>. This is JavaScript library for
+                    including interactive mathematics in a web browser.</li>
+                <li><a href="https://github.com/mrdoob" target="_blank">Ricardo Cabello (Mr.doob)</a>, the creator of <a href="https://threejs.org/" target="_blank">Three.js</a>,
+                    and to the great community of creative people who use this JavaScript library.</li>
+                <li>
+                    <a href="https://bruno-simon.com/" target="_blank">Bruno Simmon</a>, freelance, web developer, and
+                    educator.
+                    I learned the basics of Three.js from his online course <a href="https://threejs-journey.xyz/" target="_blank">Threejs Journey</a>.
+                </li>
+
+            </ul>
+
+
 
             <p class="callout">
                 <strong>Note!</strong> This project is still under construction 🏗️.
@@ -423,11 +452,9 @@
         <br>
 
 
-
-
-
         <div id="section-4">
-            <span id="license" style="margin-bottom: -20px;color: rgb(249,250,251,0);">License</span>
+            <span id="license" style="margin-bottom: 10px;color: rgb(249,250,251,0);">License</span>
+
             <h2>License</h2>
 
             <p>This book's entire contents, including the examples, problems and applets, is released under a <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons
@@ -445,8 +472,9 @@
             </ol>
 
             <p>
-                If you have any questions about what you can and can't do with these examples or applets, please 
-                <a href="mailto:jcponcemath@gmail.com"><strong><i class="fa-solid fa-envelope"></i> Get in touch</strong></a>.
+                If you have any questions about what you can and can't do with these examples or applets, please
+                <a href="mailto:jcponcemath@gmail.com"><strong><i class="fa-solid fa-envelope"></i> Get in
+                        touch</strong></a>.
 
             </p>
 
