--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
             </p>
 
 
+            <div style="width: 40%; margin: 0 auto; text-align: center;">
+              <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&amp;cl=ffffff&amp;w=a"></script>
+            </div>
+
+
+
             <p class="callout">
                 <strong>Note!</strong> This project is still under construction 🏗️.
 
