--- a/vector-functions.html
+++ b/vector-functions.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-  <title>  Vector-Valued Functions
+  <title>  Vector Functions
 </title>
 
   <meta charset="UTF-8" />
@@ -72,7 +72,7 @@
 
     <!-- Main DIV Starts here -->
     <div class="container">
-      <section data-type="chapter" id="vector-valued-functions-bVD2twg">
+      <section data-type="chapter" id="vector-functions-bVD2twg">
 
   <!-- Sidebar -->
   <nav class="w3-sidebar w3-bar-block w3-collapse w3-card" id="mySidebar">
@@ -123,7 +123,7 @@
       <p>
         <i class="fa-solid fa-bars w3-button w3-hide-large w3-xlarge" onclick="w3_open()"></i>
 
-        <span id="myTitle" class="w3-hide">Vector-Valued Functions</span>
+        <span id="myTitle" class="w3-hide">Vector Functions</span>
 
         <span title="Dark/Night Mode" id="dark-mode-toggle" class="topDark w3-theme w3-hide-small">
           <i class="fa-regular fa-sun"></i>
@@ -140,7 +140,7 @@
   <!-- Header -->
   <header class="w3-container w3-theme header-section">
 
-    <h1>Vector-Valued Functions</h1>
+    <h1>Vector Functions</h1>
 
   </header>
 
@@ -170,7 +170,7 @@
         In the mean time enjoy this beautiful animation:
       </p>
 
-      <iframe frameborder="0" height="500px" scrolling="no" src="https://www.dynamicmath.xyz/threejs/hyperbolic-helicoid/smooth.html" style="border: 1px solid black; overflow: hidden;" width="100%">
+      <iframe frameborder="0" height="500px" scrolling="no" src="applets/threejs/3d-surfaces" style="border: 1px solid black; overflow: hidden;" width="100%">
       </iframe>
 
       <div style="text-align: center;">
