--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 
             <div style="text-align: center;align-content: center;align-items: center;">
-                <a href="preamble.html"><button class="w3-center w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">Start
+                <a href="preamble.html"><button class="w3-center w3-button w3-theme w3-round-xlarge w3-hover-shadow ">Start
                         Reading!</button></a>
             </div>
 
