--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -2224,7 +2224,7 @@
     let paramsExample005 = {
       "width": 473,
       "height": 421,
-      "material_id": "acsndanr",
+      "material_id": "haskdbf5",
       "borderColor": "888888",
       "playButton": false,
       "showFullscreenButton": true,
@@ -2237,7 +2237,7 @@
     let paramsExample006 = {
       "width": 489,
       "height": 431,
-      "material_id": "haskdbf5",
+      "material_id": "eyxdcz5r",
       "borderColor": "888888",
       "playButton": false,
       "showFullscreenButton": true,
