--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -2344,7 +2344,7 @@
     let appletExample011 = new GGBApplet(paramsExample011, true);
 
     
-    let appletPolar = new GGBApplet(paramPolar, true);
+    let appletPolar = new GGBApplet(paramsPolar, true);
     let appletCylindrical = new GGBApplet(paramsCylindrical, true);
     let appletSpherical = new GGBApplet(paramsSpherical, true);
 
