--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -2286,9 +2286,9 @@
         </p>
 
         <div style="text-align: center;">
-          <iframe loading="lazy" width="70%" height="500px" scrolling="no" style="border: 1px solid black; overflow: hidden; margin-top: 10px;" src="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43"></iframe>
+          <iframe loading="lazy" width="90%" height="500px" scrolling="no" style="border: 1px solid black; overflow: hidden; margin-top: 10px;" src="applets/p5js/flux-surface-example-cylinder"></iframe>
         <br>
-         <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43" target="_blank">
+         <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="applets/p5js/flux-surface-example-cylinder" target="_blank">
           Fullscreen <i class="fas fa-external-link-alt"></i>
           </a>
         </div>
