--- a/preamble.html
+++ b/preamble.html
@@ -187,7 +187,7 @@
                 understanding how quantities change in space is crucial.
             </p>
 
-            <iframe src="applets/p5js/flow-field-noise-white" style="width: 100%; height: 300px; border: 0;" noscrolling="">
+            <iframe src="applets/p5js/flow-field-noise-white" style="width: 100%; height: 280px; border: 0;" noscrolling="">
             </iframe>
 
 
@@ -220,7 +220,7 @@
                 real-world scenarios.
             </p>
 
-            
+
 
             <h3>A warning about using computers</h3>
 
@@ -275,7 +275,7 @@
                 located on the left side.
             </p>
             <div style="text-align: center;">
-                <img style="width: 70%;" src="imgs/nav.gif">
+                <img style="width: 70%" src="imgs/nav.gif">
             </div>
 
             <p>
@@ -309,6 +309,10 @@
                     <br><br>
                     That's it! Now you can click on the same text again to
                     hide me!
+                    <picture>
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f98e/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f98e/512.gif" alt="🦎" width="32" height="32">
+                    </picture>
                 </p>
             </details>
 
@@ -336,6 +340,10 @@
             <p>That's it! If you are ready to start exploring
                 Vector Calculus, skip ahead to
                 <a href="vectors-and-the-geometry-of-space.html">Chapter 1</a>
+                <picture>
+                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f996/512.webp" type="image/webp">
+                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f996/512.gif" alt="🦖" width="32" height="32">
+                </picture>
             </p>
 
 
@@ -391,7 +399,8 @@
             <ul>
                 <li>The <a href="https://www.geogebra.org/" target="_blank">GeoGebra</a> developers and community who
                     share their wonderful constructions and applets.</li>
-                <li><a href="https://thecodingtrain.com/" target="_blank">Daniel Shiffman</a>, an amazing teacher who shares
+                <li><a href="https://thecodingtrain.com/" target="_blank">Daniel Shiffman</a>, an amazing teacher who
+                    shares
                     his knowledge with the world. I have learned all the basics about programming from his <a href="https://natureofcode.com/" target="_blank">books</a> and video tutorials <a href="https://thecodingtrain.com/" target="_blank">The Coding Train</a>.</li>
                 <li><a href="https://lauren-mccarthy.com/Info" target="_blank">Lauren McCarthy</a>, the creator of <a href="https://p5js.org/" target="_blank">p5.js</a>, and to the great community of creative
                     people who use this programming language.</li>
