--- a/preamble.html
+++ b/preamble.html
@@ -471,11 +471,12 @@
             </ol>
 
             <p>
-                If you have any questions about what you can and can't do with these examples or applets, please
+                If you have any questions, please 
                 <a href="mailto:jcponcemath@gmail.com"><strong><i class="fa-solid fa-envelope"></i> Get in
-                        touch</strong></a>.
-
+                    touch</strong></a>.
             </p>
+            
+            
 
             <hr>
 
