--- a/preamble.html
+++ b/preamble.html
@@ -399,20 +399,20 @@
             <ul>
                 <li>The <a href="https://www.geogebra.org/" target="_blank">GeoGebra</a> developers and community who
                     share their wonderful constructions and applets.</li>
-                <li><a href="https://thecodingtrain.com/" target="_blank">Daniel Shiffman</a>, an amazing teacher who
-                    shares
-                    his knowledge with the world. I have learned all the basics about programming from his <a href="https://natureofcode.com/" target="_blank">books</a> and video tutorials <a href="https://thecodingtrain.com/" target="_blank">The Coding Train</a>.</li>
                 <li><a href="https://lauren-mccarthy.com/Info" target="_blank">Lauren McCarthy</a>, the creator of <a href="https://p5js.org/" target="_blank">p5.js</a>, and to the great community of creative
                     people who use this programming language.</li>
-                <li><a href="https://paulmasson.github.io/" target="_blank">Paul Masson</a>, the creator of <a href="http://mathcell.org/" target="_blank">MathCell</a>. This is JavaScript library for
-                    including interactive mathematics in a web browser.</li>
-                <li><a href="https://github.com/mrdoob" target="_blank">Ricardo Cabello (Mr.doob)</a>, the creator of <a href="https://threejs.org/" target="_blank">Three.js</a>,
-                    and to the great community of creative people who use this JavaScript library.</li>
+                <li><a href="https://thecodingtrain.com/" target="_blank">Daniel Shiffman</a>, an amazing teacher who
+                    shares his knowledge with the world. I have learned all the basics about programming from his <a href="https://natureofcode.com/" target="_blank">books</a> and video tutorials <a href="https://thecodingtrain.com/" target="_blank">The Coding Train</a>.</li>
                 <li>
                     <a href="https://bruno-simon.com/" target="_blank">Bruno Simmon</a>, freelance, web developer, and
                     educator.
                     I learned the basics of Three.js from his online course <a href="https://threejs-journey.xyz/" target="_blank">Threejs Journey</a>.
                 </li>
+                <li><a href="https://github.com/mrdoob" target="_blank">Ricardo Cabello (Mr.doob)</a>, the creator of <a href="https://threejs.org/" target="_blank">Three.js</a>,
+                    and to the great community of creative people who use this JavaScript library.</li>
+
+                <li><a href="https://paulmasson.github.io/" target="_blank">Paul Masson</a>, the creator of <a href="http://mathcell.org/" target="_blank">MathCell</a>. This is JavaScript library for
+                    including interactive mathematics in a web browser.</li>
 
             </ul>
 
@@ -436,7 +436,7 @@
                 <br>
                 If you found this project useful, please consider becoming a member in
                 <a href="https://www.patreon.com/bePatron?u=10515025"><strong>Patreon</strong></a>.
-                ♾️ Thanks!
+                ♾️ Thanks everyone! 
 
 
             </p>
@@ -471,14 +471,17 @@
             </ol>
 
             <p>
-                If you have any questions, please 
+                If you have any questions, please
                 <a href="mailto:jcponcemath@gmail.com"><strong><i class="fa-solid fa-envelope"></i> Get in
-                    touch</strong></a>.
+                        touch</strong></a>.
             </p>
-            
-            
+
+            <br>
+
 
             <hr>
+
+            <br>
 
             <p class="w3-center">
                 If you would like to support this project, you can do it using the following links:
