--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 
             <div style="width: 25%; margin: 0 auto; text-align: center;">
-              <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&amp;cl=ffffff&amp;w=a"></script>
+              <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=a&t=tt&d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
             </div>
 
 
