--- a/preamble.html
+++ b/preamble.html
@@ -187,7 +187,7 @@
                 understanding how quantities change in space is crucial.
             </p>
 
-            <iframe src="applets/p5js/flow-field-noise-white" style="width: 100%; height: 280px; border: 0;" noscrolling="">
+            <iframe src="https://www.dynamicmath.xyz/math2001/sketches/gravity/" style="width: 100%; height: 280px; border: 0;" noscrolling="">
             </iframe>
 
 
