--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -2382,7 +2382,8 @@
         a character's movement is
         described
         using a velocity vector, which determines
-        both the speed and direction. When forces
+        both the speed and direction 
+        (see for example <a href="https://wizard-game-voidereles-projects.vercel.app/" target="_blank">The Wizard Game</a>). When forces
         like gravity or collisions
         occur, vector operations such as addition
         and scalar multiplication help compute the resulting motion
@@ -2391,10 +2392,10 @@
 
 
       <p>
-        In the applet below, you'll see how vectors
+        In the applet below, you can see how vectors
         are used in a collision simulation,
         where the direction and magnitude of
-        velocities before and after the collision
+        velocities, before and after the collision,
         are calculated.
       </p>
 
@@ -2404,11 +2405,6 @@
     </div>
 
     <br>
-
-    <!--
-     <iframe frameborder="0" height="500px" scrolling="no" src="applets/p5js/flow-field-noise"
-        style="border: 1px solid black; overflow: hidden;" width="100%">
-      </iframe>-->
 
   </div>
 
