--- a/applets/js/physics-sim/index.html
+++ b/applets/js/physics-sim/index.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
+	
 	<title>Physics World</title>
 	<link href='style.css' rel='stylesheet'>
 
-	<script src="lil-gui.min.js"></script>
+	<script src="./lil-gui.min.js"></script>
 	<script>
 		let GUI = lil.GUI;
 	</script>
+
 </head>
 
 <body>
@@ -24,78 +26,6 @@
 
 	</div>
 
-	<script type="module">
-
-	</script>
-
-	<!--
-<div class='controls'>
-		<div class='sliders'>
-
-			
-			<label>K</label>
-			<input type='range' min='0.01' max='0.5' step='0.01' value='0.05' id='k'>
-
-			<label>Friction</label>
-			<input type='range' min='0' max='1' step='0.01' value='0.2' id='friction'>
-
-			<label>Damping</label>
-			<input type='range' min='0' max='1' step='0.01' value='0' id='damping'>
-
-			<label>Restitution</label>
-			<input type='range' min='0' max='1' step='0.01' value='0.3' id='restitution'>
-			<label>Particles</label>
-			<input type='range' min='1' max='100' value='40' id='numParticles'>
-
-			<label>Particle Lifespan</label>
-			<input type='range' min='100' max='1000' value='1000' id='lifespan'>
-			<a class='btn' id='clear' onClick="window.location.reload();">Reset</a>
-
-		</div>
-
-			
-
-		
-		<div class='checks'>
-
-
-			<fieldset>
-				<input type='checkbox' id='connectors' checked>
-				<label for='connectors'>Show Connections</label>
-			</fieldset>
-
-			<fieldset>
-				<input type='checkbox' id='vectors' checked>
-				<label for='vectors'>Show Vectors</label>
-			</fieldset>
-
-			<fieldset>
-				<input type='checkbox' id='smbh'>
-				<label for='smbh'>SMBH</label>
-			</fieldset>
-
-			<fieldset>
-				<input type='checkbox' id='walls'>
-				<label for='walls'>Walls</label>
-			</fieldset>
-			<fieldset>
-				<input type='checkbox' id='random' checked>
-				<label for='random'>Random Spawn</label>
-			</fieldset>
-
-			<fieldset>
-				<input type='checkbox' id='particleGravity' checked>
-				<label for='particleGravity'>Particle Attraction</label>
-			</fieldset>
-			<fieldset>
-				<input type='checkbox' id='verticalGravity'>
-				<label for='verticalGravity'>Vertical Gravity</label>
-			</fieldset>
-
-
-		</div>
-
-	</div>-->
 	<script src='const.js'></script>
 	<script src='object.js'></script>
 	<script src='world.js'></script>
@@ -104,7 +34,7 @@
 		let worldStage = document.getElementById('world');
 
 		worldStage.style.width = window.innerWidth + 'px';
-		worldStage.style.height = window.innerHeight  + 'px';
+		worldStage.style.height = window.innerHeight + 'px';
 
 		worldStage.width = worldStage.clientWidth;
 		worldStage.height = worldStage.clientHeight;
