--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -2145,6 +2145,9 @@
       <script type="text/javascript" src="https://www.dynamicmath.xyz/math2001/sketches/cindyjs/v0.7.11/Cindy.js"></script>
       <script type="text/javascript" src="https://www.dynamicmath.xyz/math2001/sketches/cindyjs/v0.7.11/CindyGL.js"></script>
       <script type="text/javascript" src="https://www.dynamicmath.xyz/math2001/sketches/cindyjs/symbolic.js"></script>
+      <div style="text-align: center;" class="w3-hide-large w3-hide-medium">
+        <img style="width: 90%;" src="imgs/vectors-and-the-geometry-of-space/electro-mag-field.jpg">
+      </div>
       <div style="text-align: center;" class="w3-hide-small">
         <script id="csinit" type="text/x-cindyscript">
           use("CindyGL");
