--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -2386,15 +2386,16 @@
         described
         using a velocity vector, which determines
         both the speed and direction 
-        (for example <a href="https://wizard-game-voidereles-projects.vercel.app/" target="_blank">The Wizard Game</a>). When forces
-        like gravity or collisions
-        occur, vector operations such as addition
-        and scalar multiplication help compute the resulting motion
-        realistically.
+        (for example <a href="https://wizard-game-voidereles-projects.vercel.app/" target="_blank">The Wizard Game</a>). 
       </p>
 
 
       <p>
+        When forces
+        like gravity or collisions
+        occur, vector operations such as addition
+        and scalar multiplication help compute the resulting motion
+        realistically.
         In the applet below, you can see how vectors
         are used in a collision simulation,
         where the direction and magnitude of
