--- a/applets/js/physics-sim/index.html
+++ b/applets/js/physics-sim/index.html
@@ -4,6 +4,7 @@
 <head>
 
 	<title>Physics World</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link href='style.css' rel='stylesheet'>
 
 	<script src="./lil-gui.min.js"></script>
