--- a/vectors-and-the-geometry-of-space.html
+++ b/vectors-and-the-geometry-of-space.html
@@ -2405,6 +2405,12 @@
       <iframe loading="lazy" frameborder="0" height="450px" noscrolling="" src="applets/js/physics-sim" style="border: 0px solid black; overflow: hidden;" width="100%">
       </iframe>
 
+      <div style="text-align: center;">
+        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="applets/js/physics-sim" target="_blank">
+          Fullscreen <i class="fas fa-external-link-alt"></i>
+        </a>
+      </div>
+
     </div>
 
     <br>
