--- a/preamble.html
+++ b/preamble.html
@@ -177,49 +177,78 @@
             </div>
 
             <h2>
-                Introduction
+                About This Book
             </h2>
 
             <p>
-                Vector Calculus is a powerful branch of mathematics that extends traditional calculus into multiple
-                dimensions. It enables the study of phenomena involving direction and magnitude, and serves as the
-                mathematical foundation for fields such as physics, engineering, and computer graphics, where
-                understanding how quantities change in space is crucial.
+                In my experience teaching mathematics,
+                I have always sought to help students develop a deeper
+                understanding of complex concepts through
+                visualizations and interactive exploration.
+                Over the years, I
+                have created dynamic applets for my classes,
+                allowing students to engage with mathematical
+                ideas in a
+                hands-on way. These interactive tools have
+                proven to be valuable in making abstract topics more
+                accessible and intuitive.
+
             </p>
 
-            <iframe src="https://www.dynamicmath.xyz/math2001/sketches/gravity/" style="width: 100%; height: 280px; border: 0;" noscrolling="">
+            <p>
+
+                Inspired by the success of my 2019 online 
+                interactive book 
+                <a href="https://complex-analysis.com/" target="_blank">Visual Complex Analysis</a>,
+                and supported by my patrons on 
+                <a href="https://www.patreon.com/jcponce" target="_blank">Patreon</a>,
+                I decided 
+                to create this book on vector
+                calculus. It brings together the applets 
+                I have developed over the years, 
+                offering a collection of high-quality,
+                interactive learning materials. My goal is 
+                to make mathematical concepts more 
+                engaging and insightful
+                for learners at all levels.
+            </p>
+
+            <p>
+
+                This book is completely <strong>free</strong> to access, 
+                with no ads or distractions—just high-quality mathematical
+                learning experiences. 
+                If you would like to support this project, you can do it using the following links:
+            </p>
+
+            <div class="button-container">
+                <button id="modal-link">
+                    <a href="https://www.patreon.com/jcponce"><i class="fa-brands fa-patreon"></i>
+                        <strong>Patreon</strong></a>
+                </button>
+                <button id="modal-link">
+                    <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=WTMTR7D8RYZ26&amp;item_name=Your+support+will+help+me+to+improve+and+keep+up+to+date+the+applets+of+this+book.+Sincerely+appreciate+it%21&amp;currency_code=AUD&amp;source=url">
+                        <strong><i class="fa-brands fa-paypal"></i> PayPal</strong>
+                    </a>
+                </button>
+                <button id="modal-link">
+                    <a target="_blank" href="https://jcponcemath.secure-decoration.com/">
+                        <strong>Get a <i class="fa-solid fa-shirt"></i></strong>
+                    </a>
+                </button>
+            </div>
+
+            <p class="w3-center">
+                Thank you for your support!
+                <br>
+                <picture>
+                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f422/512.webp" type="image/webp">
+                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f422/512.gif" alt="🐢" width="32" height="32">
+                </picture>
+            </p>
+
+            <iframe src="applets/p5js/flow-field-noise-white" style="width: 100%; height: 350px; border: 0;" noscrolling="">
             </iframe>
-
-
-
-            <p>
-                This interactive book combines theoretical concepts
-                with dynamic visualizations to provide a hands-on
-                approach to learning Vector Calculus.
-                Unlike traditional textbooks, this online
-                resource integrates interactive applets to help
-                you visualize complex concepts
-                in a way that bridges intuition with
-                mathematical rigor.
-                You will be able to explore
-                the geometry of vectors is space, parametric surfaces,
-                vector fields, gradients, divergence, curl,
-                line and surface
-                integrals, among other topics,
-                through engaging simulations.
-                These applets are built using open-source
-                tools such as <strong>GeoGebra, Desmos, p5.js,
-                    Three.js, MathBox,</strong> and
-                <strong>MathCell.js</strong>.
-            </p>
-
-            <p>
-                As you work through the material, you'll gain
-                a deeper understanding of the subject and appreciate both
-                its beauty and its practical applications in
-                real-world scenarios.
-            </p>
-
 
 
             <h3>A warning about using computers</h3>
@@ -331,14 +360,14 @@
                         <br>
                         You can close this note by clicking
                         again on the same text.
+
                     </span>
                 </span>
 
             </p>
 
 
-            <p>That's it! If you are ready to start exploring
-                Vector Calculus, skip ahead to
+            <p><strong>That's it!</strong> Are you ready to get started, skip ahead to
                 <a href="vectors-and-the-geometry-of-space.html">Chapter 1</a>
                 <picture>
                     <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f996/512.webp" type="image/webp">
@@ -436,7 +465,7 @@
                 <br>
                 If you found this project useful, please consider becoming a member in
                 <a href="https://www.patreon.com/bePatron?u=10515025"><strong>Patreon</strong></a>.
-                ♾️ Thanks everyone! 
+                ♾️ Thanks everyone!
 
 
             </p>
@@ -476,42 +505,13 @@
                         touch</strong></a>.
             </p>
 
-            <br>
-
-
-            <hr>
+            
+            
 
             <br>
 
-            <p class="w3-center">
-                If you would like to support this project, you can do it using the following links:
-            </p>
-
-            <div class="button-container">
-                <button id="modal-link">
-                    <a href="https://www.patreon.com/jcponce"><i class="fa-brands fa-patreon"></i>
-                        <strong>Patreon</strong></a>
-                </button>
-                <button id="modal-link">
-                    <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=WTMTR7D8RYZ26&amp;item_name=Your+support+will+help+me+to+improve+and+keep+up+to+date+the+applets+of+this+book.+Sincerely+appreciate+it%21&amp;currency_code=AUD&amp;source=url">
-                        <strong><i class="fa-brands fa-paypal"></i> PayPal</strong>
-                    </a>
-                </button>
-                <button id="modal-link">
-                    <a target="_blank" href="https://jcponcemath.secure-decoration.com/">
-                        <strong>Get a <i class="fa-solid fa-shirt"></i></strong>
-                    </a>
-                </button>
-            </div>
-
-            <p class="w3-center">
-                Thank you for your support!
-                <br>
-                <picture>
-                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f422/512.webp" type="image/webp">
-                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f422/512.gif" alt="🐢" width="32" height="32">
-                </picture>
-            </p>
+            <iframe src="applets/p5js/flow-field-no-particles" style="width: 100%; height: 350px; border: 0;" noscrolling="">
+            </iframe>
 
             <br>
 
