--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <body data-type="book" id="top">
 
-
+ 
 
   <div class="w3-main w3-large" style="margin-left:250px;">
 
@@ -133,7 +133,6 @@
 
                 <div class="expanding-bar"></div>
 
-
                 <h4 class="w3-hide-small text">Juan Carlos Ponce Campuzano</h4>
 
                 <h4 class="w3-hide-large w3-hide-medium text" style="font-size:16px">Juan Carlos <br> Ponce Campuzano
@@ -141,6 +140,8 @@
 
 
             </div>
+
+
 
         </div>
 
@@ -163,22 +164,47 @@
             <h2>Welcome to Vector Calculus</h2>
 
             <p>
-                This interactive book offers a hands-on approach to 
-                learning Vector Calculus, blending theory with 
-                dynamic visualizations. With open-source mathematical 
-                software, you'll explore essential topics like
-                the geometry of vectors, parametric surfaces,
-                gradients, divergence, curl,  
-                vector fields, line and surface integrals, and 
-                fundamental theorems in an interactive setting 
-                that connects intuition with mathematical precision.
+                Vector Calculus is a powerful branch of mathematics that extends traditional calculus into multiple
+                dimensions. It enables the study of phenomena involving direction and magnitude, and serves as the
+                mathematical foundation for fields such as physics, engineering, and computer graphics, where
+                understanding how quantities change in space is crucial.
             </p>
 
+            <p>
+                This interactive book combines theoretical concepts
+                with dynamic visualizations to provide a hands-on
+                approach to learning Vector Calculus.
+                Unlike traditional textbooks, this online
+                resource integrates interactive applets to help
+                you visualize complex concepts
+                in a way that bridges intuition with
+                mathematical rigor.
+                You will be able to explore
+                the geometry of vectors is space, parametric surfaces,
+                vector fields, gradients, divergence, curl,
+                line and surface
+                integrals, among other topics,
+                through engaging simulations.
+                These applets are built using open-source
+                tools such as <strong>GeoGebra, Desmos, p5.js,
+                    Three.js, MathBox,</strong> and
+                <strong>MathCell.js</strong>.
+            </p>
 
-            <div style="width: 30%; margin: 0 auto; text-align: center;">
-              <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=a&t=tt&d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
-            </div>
+            <p>
+                As you work through the material, you'll gain
+                a deeper understanding of the subject and appreciate both
+                its beauty and its practical applications in
+                real-world scenarios.
+            </p>
 
+            <br>
+
+
+            <!--
+            <div style="width: 35%; margin: 0 auto; text-align: center;">
+                <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=a&t=tt&d=Rp15-WKVPl92BEVohYDsoC24keCnztkEy1gA2YWWU5o&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+            </div>-->
 
 
             <p class="callout">
@@ -191,7 +217,7 @@
                     Miguel Díaz, Ruan Ramon, Maciej Lasota,
                     Christopher-Alexander Hermanns, Aarón Reyes,
                     Gabriela Sofia Marin Sanchez, Jerome Siegler,
-                    Yashar Shoraka, Jeff Butterworth, 
+                    Yashar Shoraka, Jeff Butterworth,
                     Scott Pedersen, Ihsan Karabulut,
                     Elias Sanchez Angarano, Emanuel Silva.
                 </strong>
