--- a/preamble.html
+++ b/preamble.html
@@ -84,7 +84,7 @@
         <a class="w3-bar-item w3-button" id="chapterBar" href="preamble.html">0. Preamble</a>
 
         <div class="toc-chapter" id="toc-chapter">
-                        <a class="w3-bar-item w3-button" href="#section-1">Introduction</a>
+                        <a class="w3-bar-item w3-button" href="#section-1">About This Book</a>
                         <a class="w3-bar-item w3-button" href="#section-2">Navigation</a>
                         <a class="w3-bar-item w3-button" href="#section-3">Acknowledgements</a>
                         <a class="w3-bar-item w3-button" href="#section-4">License</a>
