--- a/preamble.html
+++ b/preamble.html
@@ -216,7 +216,7 @@
             <p>
 
                 This book is completely <strong>free</strong> to access, 
-                with no ads or distractions—just high-quality mathematical
+                with no distracting ads —just high-quality mathematical
                 learning experiences. 
                 If you would like to support this project, you can do it using the following links:
             </p>
@@ -247,7 +247,7 @@
                 </picture>
             </p>
 
-            <iframe  loading="lazy" src="applets/threejs/gravity/" style="width: 100%; height: 350px; border: 0;" noscrolling="">
+            <iframe loading="lazy" src="applets/threejs/gravity/" style="width: 100%; height: 350px; border: 0;" noscrolling="">
             </iframe>
 
 
